Tue Apr 15 16:06:24 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Log_Msg_NT_Event_Log.cpp (close): Make sure to check for
	  this->evlog_handle_ != 0 before calling DeregisterEventSource().
  	  Thanks to Paxton Mason <PMason@wolve.com> for reporting this.

	* ace/Timer_Wheel_T.cpp: Removed the use of a namespace since
	  this breaks certain compilers (e.g., GCC 2.7-97 on LynxOS).
  	  Thanks to Olli Savia <ops@iki.fi> for reporting this problem.

	* ace/OS.h: Make sure that things don't go awry on platforms
	  where clearerr is defined as a macro.  Thanks to Olli Savia
 	  <ops@iki.fi> for reporting this problem on LynxOS.

Tue Apr 15 17:53:29 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/parser/parser/Makefile:
          When building shared library set the ACEXML_PARSER_BUILD_DLL
          define. This fixes linker errors in the Kylix build.

Tue Apr 15 17:33:01 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * acconfig.h:
        * ace/Addr.{h,cpp}:
        * ace/README:
          Removed ACE_HAS_BROKEN_SAP_ANY. With the removal of this define
          from the MinGW config file it is not used anymore in ACE so we
          remove this one.

Tue Apr 15 09:47:22 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/Kokyu.cpp:
	* Kokyu/DSRT_Dispatcher_Impl.cpp:
	* Kokyu/tests/DSRT_MIF/MIF.cpp:
	* Kokyu/tests/DSRT_MIF/svc.conf:
	* Kokyu/tests/DSRT_MIF/svc.conf.xml:

	  Service config related changes to Kokyu DSRT framework.

Tue Apr 15 11:24:59 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_borland.GNU:
          Use bcpp as TAO_IDL preprocessor.

Tue Apr 15 08:18:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-borland-common.h:
        * ace/config-win32-borland.h:
          Moved ACE_HAS_ITOA from config-borland-common to config-win32-
          borland. It is only needed on Windows and not on Linux where
          Kylix runs.
